charan_azurek8_terraform/Day25_ingress-examples/hellok8s-ingress/hellok8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hellok8s-service
spec:
  type: ClusterIP
  selector:
    app: hellok8s
  ports:
  - port: 8080
    targetPort: 8080
