charan_azurek8_terraform/Day25_ingress-examples/hellok8s-ingress/hellok8s-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hellok8s-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hellok8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hellok8s-service
          servicePort: 8080
